--- a/2/debian-10/Dockerfile
+++ b/2/debian-10/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.io/bitnami/minideb:buster
+FROM debian:bullseye
 LABEL maintainer "Bitnami <containers@bitnami.com>"
 
 ENV HOME="/" \
@@ -8,7 +8,7 @@ ENV HOME="/" \
 
 COPY prebuildfs /
 # Install required system packages and dependencies
-RUN install_packages acl ca-certificates curl fontconfig fonts-dejavu-extra gzip libc6 libcom-err2 libcurl4 libffi6 libgcc1 libgcrypt20 libgmp10 libgnutls30 libgpg-error0 libgssapi-krb5-2 libhogweed4 libidn2-0 libk5crypto3 libkeyutils1 libkrb5-3 libkrb5support0 libldap-2.4-2 libnettle6 libnghttp2-14 libp11-kit0 libpsl5 librtmp1 libsasl2-2 libssh2-1 libssl1.1 libtasn1-6 libunistring2 openssh-client procps tar unzip zlib1g
+RUN apt-get update -y && apt-get upgrade -y && apt-get install -y podman acl ca-certificates curl fontconfig fonts-dejavu-extra gzip libc6 libcom-err2 libcurl4 libffi7 libgcc1 libgcrypt20 libgmp10 libgnutls30 libgpg-error0 libgssapi-krb5-2 libhogweed6 libidn2-0 libk5crypto3 libkeyutils1 libkrb5-3 libkrb5support0 libldap-2.4-2 libnettle8 libnghttp2-14 libp11-kit0 libpsl5 librtmp1 libsasl2-2 libssh2-1 libssl1.1 libtasn1-6 libunistring2 openssh-client procps tar unzip zlib1g
 RUN . /opt/bitnami/scripts/libcomponent.sh && component_unpack "render-template" "1.0.0-3" --checksum 8179ad1371c9a7d897fe3b1bf53bbe763f94edafef19acad2498dd48b3674efe
 RUN . /opt/bitnami/scripts/libcomponent.sh && component_unpack "java" "1.8.292-0" --checksum 700e2d8391934048faefb45b4c3a2af74bc7b85d4c4e0e9a24164d7256456ca2
 RUN . /opt/bitnami/scripts/libcomponent.sh && component_unpack "gosu" "1.13.0-0" --checksum fd7257c2736164d02832dbf72e2c1ed9d875bf3e32f0988520796bc503330129
@@ -16,14 +16,8 @@ RUN . /opt/bitnami/scripts/libcomponent.sh && component_unpack "git" "2.32.0-0" 
 RUN . /opt/bitnami/scripts/libcomponent.sh && component_unpack "jenkins" "2.289.1-0" --checksum 0c4dbf328614f895f14775b14a8fa869870d74f4e337c9e7c83d3014a5f5296c
 RUN chmod g+rwX /opt/bitnami
 
-# install docker
-RUN apt-get update -y && apt-get install curl apt-transport-https ca-certificates curl gnupg2 software-properties-common -y && \
-    curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - && \
-    add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" && \
-    apt-get update -y && \
-    apt-get install docker-ce -y
-
 COPY rootfs /
+
 RUN /opt/bitnami/scripts/jenkins/postunpack.sh
 ENV BITNAMI_APP_NAME="jenkins" \
     BITNAMI_IMAGE_VERSION="2.289.1-debian-10-r6" \
@@ -36,5 +30,6 @@ ENV BITNAMI_APP_NAME="jenkins" \
 EXPOSE 8080 8443 50000
 
 USER 1001
+
 ENTRYPOINT [ "/opt/bitnami/scripts/jenkins/entrypoint.sh" ]
 CMD [ "/opt/bitnami/scripts/jenkins/run.sh" ]
